<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/controls"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/labelLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:singleLine="false"
                android:textIsSelectable="true" />
        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        card_view:cardElevation="8dp">

        <TextView
            android:id="@+id/server_disabled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="@dimen/console_log_min_height"
            android:text="@string/server_disabled"
            android:padding="16dp"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:id="@+id/command_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="gone">

            <EditText
                android:id="@+id/editCommand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/console"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/enter"
                android:src="@drawable/ic_send_black"
                android:background="?android:attr/selectableItemBackground"
                android:padding="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>